feat: native v4 module

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,8 +1,9 @@
 [profile.default]
 src = "src"
 out = "out"
-evm_version = "paris"
-solc_version = "0.8.20"
 libs = ["lib"]
+ffi = true
+fs_permissions = [{ access = "read-write", path = ".forge-snapshots/"}]
+cancun = true
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+solc = "lib/periphery-next/lib/v4-core/bin/solc-mac"
