--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,6 @@
 [submodule "lib/openzeppelin-contracts-upgradeable"]
 	path = lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
-[submodule "lib/valantis-sot"]
+[submodule "lib/valantis-core"]
 	path = lib/valantis-sot
-	url = https://github.com/ValantisLabs/valantis-sot
+	url = https://github.com/ValantisLabs/valantis-core
