--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,8 @@ ffi = true
 fs_permissions = [{ access = "read-write", path = ".forge-snapshots/"}]
 evm_version = "cancun"
 auto_detect_solc = true
+optimizer = true
+optimizer-runs = 10_000
 [fmt]
 line_length = 70
 multiline_func_header = "params_first"
