--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "lib/v4-periphery"]
 	path = lib/v4-periphery
 	url = https://github.com/Uniswap/v4-periphery
+[submodule "lib/doppler-hook"]
+	path = lib/doppler-hook
+	url = https://github.com/ArrakisFinance/doppler-hook
