--- a/foundry.toml
+++ b/foundry.toml
@@ -22,6 +22,12 @@ compilation_restrictions = [
   { paths = "./script/setHookPoolKey.s.sol", via_ir = true },
  # Add more as needed
 ]
+
+[profile.lite]
+optimizer = false
+optimizer-runs = 0
+via_ir = false
+
 [fmt]
 line_length = 70
 multiline_func_header = "params_first"
